--- a/expression.css
+++ b/expression.css
@@ -16,13 +16,12 @@
   font: 10px sans-serif;
 }
 
-.axis path,
 .axis line {
-  fill: black;
+  fill: none;
   stroke: #000;
   shape-rendering: crispEdges;
 }
 
-.x.axis path {
+.axis path {
   display: none;
 }
